--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -37,7 +37,7 @@
           >статті за посиланням.
         </a>
       </p>
-      <img width="640px" src="img/uman.jpg" alt="uman" />
+      <img src="img/uman.jpg" alt="uman" />
       <!--------ЧУДО №3 --------->
       <h2 id="h2-3" class="sub-title">
         №3 Заповідник “Кам’янець” в Кам’янець – Подільську
@@ -61,7 +61,7 @@
         Петра Сагайдачного. Коли вдалося зупинити наступ Османської імперії та
         врятувати Європу.
       </p>
-      <img width="640px" src="img/hotun.jpg" alt="hotun" />
+      <img src="img/hotun.jpg" alt="hotun" />
       <!--------ЧУДО №5 --------->
       <h2 id="h2-5" class="sub-title">
         № 5 Запорізька Січ, Острів Хортиця (Запорізька область)
@@ -99,7 +99,7 @@
           >посиланням. <br />
         </a>
       </span>
-      <img width="640px" src="img/sofia.jpeg" alt="sofia" />
+      <img src="img/sofia.jpeg" alt="sofia" />
     </main>
     <footer>
       <p>Ознайомитись ще раз</p>
